--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <script src="/gg_bd_ad_720x90.js" type="text/javascript"></script><script src="/follow.js" type="text/javascript"></script></div>
             </div>
         </div><!-- /container -->
-        <script src="js/modernizr.custom.js"></script>
+        <script src="javasrcipts/scale.fix.js"></script>
         <script>
             //  The function to change the class
             var changeClass = function (r,className1,className2) {
